@@ -12,3 +12,6 @@ Pet project para estudos de GitOps, Helm e OpenJ9
 
 ### Como criar a imagem Docker
     docker build . --tag flmendes/spring-boot-app:v2.0.2
+
+### Como criar uma JVM customizada
+    jlink --add-modules java.base,java.compiler,java.instrument,java.naming,java.rmi,java.security.jgss,java.security.sasl,java.sql,jdk.jconsole,jdk.unsupported --compress 2 --no-header-files --no-man-pages --output target/runtime-image
